# esp-azure

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Kconfig  Makefile  README.md  component.mk
azure-iot-sdk-c/: readme.md
azure-iot-sdk-c/c-utility/: README.md
azure-iot-sdk-c/c-utility/adapters/: agenttime_esp8266.c  platform_esp8266.c  socketio_mbed.c
azure-iot-sdk-c/c-utility/build_all/mbed/: azure_c_shared_utility_filelist.txt
azure-iot-sdk-c/c-utility/devdoc/: http_proxy_io_requirements.md  porting_guide.md  sastoken_requirements.md
azure-iot-sdk-c/c-utility/jenkins/: linux_bearssl.sh  linux_wolfssl_clang_buildonly.sh
azure-iot-sdk-c/c-utility/pal/: tlsio_options.c
azure-iot-sdk-c/c-utility/samples/tlsio_connect/: CMakeLists.txt
azure-iot-sdk-c/c-utility/src/: consolelogger.c  etwlogger_driver.c  http_proxy_io.c  httpapiexsas.c  string_token.c  uws_client.c  wsio.c
azure-iot-sdk-c/c-utility/tests/httpapicompact_ut/: httpapicompact_ut.c
azure-iot-sdk-c/c-utility/tests/sastoken_ut/: CMakeLists.txt
azure-iot-sdk-c/c-utility/tests/singlylinkedlist_ut/: CMakeLists.txt
azure-iot-sdk-c/uamqp/: .gitmodules
azure-iot-sdk-c/uamqp/devdoc/: amqp_management_requirements.md  cbs_requirements.md  sasl_plain_requirements.md
azure-iot-sdk-c/uamqp/jenkins/: inteledison_c.sh  linux_c_gcc44.sh  windowsce_c.cmd
azure-iot-sdk-c/uamqp/src/: amqp_definitions.c  amqpvalue.c  amqpvalue_to_string.c  connection.c  frame_codec.c  header_detect_io.c  link.c  message_sender.c  session.c
azure-iot-sdk-c/uamqp/uamqp_generator/: amqp_definitions_c.cs  amqp_definitions_c.tt  uamqp_generator.csproj
azure-iot-sdk-c/umqtt/: .gitignore  .gitmodules  CMakeLists.txt  readme.md
azure-iot-sdk-c/umqtt/build_all/linux/: build.sh
azure-iot-sdk-c/umqtt/build_all/mbed/: CMakeLists.txt  azure_umqtt_c_filelist.txt  build.cmd
azure-iot-sdk-c/umqtt/build_all/packaging/linux/debian/: azure-umqtt-c-dev.dirs  changelog-trusty  changelog-vivid  changelog-wily  changelog-xenial  control  copyright  rules
azure-iot-sdk-c/umqtt/build_all/packaging/windows/: Microsoft.Azure.umqtt.nuspec  Microsoft.Azure.umqtt.targets  Microsoft.Azure.umqtt_thirdpartynotice.txt  rebuild_nugets.cmd
azure-iot-sdk-c/umqtt/build_all/windows/: build.cmd
azure-iot-sdk-c/umqtt/devdoc/requirement_docs/: mqtt_client_requirements.md  mqtt_codec_requirements.md  mqtt_message_requirements.md
azure-iot-sdk-c/umqtt/inc/azure_umqtt_c/: mqtt_client.h  mqttconst.h
azure-iot-sdk-c/umqtt/jenkins/: debian_c.sh  linux_c.sh  linux_c_gcc44.sh  mbed_c.cmd  raspberrypi_c.sh  ubuntu1604_c.sh  windows_c.cmd
azure-iot-sdk-c/umqtt/samples/: CMakeLists.txt
azure-iot-sdk-c/umqtt/samples/mqtt_client_sample/: CMakeLists.txt  mqtt_client_sample.c  mqtt_client_sample.h
azure-iot-sdk-c/umqtt/samples/mqtt_client_sample/mbed/: CMakeLists.txt  main.c  mqtt_client_sample_filelist.txt
azure-iot-sdk-c/umqtt/src/: mqtt_client.c  mqtt_codec.c  mqtt_message.c
azure-iot-sdk-c/umqtt/tests/: CMakeLists.txt
azure-iot-sdk-c/umqtt/tests/mqtt_client_ut/: CMakeLists.txt  main.c  mqtt_client_ut.c
azure-iot-sdk-c/umqtt/tests/mqtt_codec_ut/: CMakeLists.txt  main.c  mqtt_codec_ut.c
azure-iot-sdk-c/umqtt/tests/mqtt_message_ut/: CMakeLists.txt  main.c  mqtt_message_ut.c
components/azure_iot/: component.mk
doc/: IoT_Suite.md  azure_cli_iot_hub.md  iothub_explorer.md
examples/: README.md
examples/azure_iot_pnp_sample/: CMakeLists.txt  Makefile  readme.md
examples/azure_iot_pnp_sample/main/: CMakeLists.txt  Kconfig.projbuild  azure_main.c  component.mk  esp32AzureKit_impl.c  iot_pnp_client.c  iot_pnp_client.h  motor.c  motor.h  oled.c  oled.h  pnp_device.c  pnp_device.h  sensor_manager.c  sensor_manager.h
examples/azure_iot_pnp_sample/pnp_temperature_controller/: CMakeLists.txt  Makefile  partitions_pnpapp.csv  sdkconfig.defaults
examples/cert/: leaf.csr  rootCA.key  rootCA.pem  verification.csr  verification_certificate.pem
examples/iothub_client_sample_mqtt/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
examples/iothub_client_sample_mqtt/main/: CMakeLists.txt  Kconfig.projbuild  azure_main.c  iothub_client_sample_mqtt.c  iothub_client_sample_mqtt.h
examples/iothub_devicetwin_samples_and_methods/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
examples/iothub_devicetwin_samples_and_methods/main/: CMakeLists.txt  Kconfig.projbuild  azure_main.c  iothub_client_device_twin_and_methods_sample.c
examples/iothub_pnp_samples_temperature_controller/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
examples/iothub_pnp_samples_temperature_controller/components/: CMakeLists.txt  component.mk
examples/iothub_pnp_samples_temperature_controller/main/: CMakeLists.txt  Kconfig.projbuild  azure_main.c  component.mk  iothub_pnp_sample.c  iothub_pnp_sample.h
examples/prov_dev_client_ll_sample/: CMakeLists.txt  Makefile  README.md
examples/prov_dev_client_ll_sample/main/: CMakeLists.txt  Kconfig.projbuild  azure_main.c  custom_hsm_x509.c  prov_dev_client_ll_sample.c
examples/prov_dev_client_ll_sample_symm_keys/: CMakeLists.txt  Makefile  README.md
examples/prov_dev_client_ll_sample_symm_keys/main/: CMakeLists.txt  Kconfig.projbuild  azure_main.c  custom_hsm_symm_key.c  prov_dev_client_ll_sample_symm_keys.c
examples_my/prov_dev_client_ll_sample/main/: component.mk  prov_dev_client_ll_sample.c
main/: azure_main.c  iothub_client_sample_mqtt.c
port/: CMakeLists.txt
port/azure-sdk-for-c/sdk/src/azure/core/: az_span.c
port/azure-sdk-for-c/sdk/src/azure/iot/: az_iot_hub_client_sas.c
port/inc/: agenttime_esp.h  esp_azure_iot.h  esp_azure_iot_hub_client.h  esp_azure_iot_mqtt_client.h  esp_azure_iot_provisioning_client.h  socket_async_os.h  tlsio_pal.h
port/src/: agenttime_esp.c  certs.c  esp_azure_iot.c  esp_azure_iot_hub_client.c  esp_azure_iot_mqtt_client.c  esp_azure_iot_provisioning_client.c  esp_azure_iot_time.c  platform_esp.c  socketio_berkeley.c  socketio_esp.c  threadapi.c  threadapi_esp32_pthreads.c  tlsio_esp_tls.c  tlsio_openssl_compact.c  uniqueid_esp32.c  wsio_esp.c
(+112 files in other folders)
